fix: rm gap

--- a/packages/core/src/editor/editor.css
+++ b/packages/core/src/editor/editor.css
@@ -121,7 +121,7 @@ Tippy popups that are appended to document.body directly
   max-height: 1.1rem;
   max-width: 20rem;
   padding: 0.1rem 0.3rem;
-  top: -19px;
+  top: -18px;
   left: -1px;
   border-radius: 3px 3px 3px 0;
 
